<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageArticleDetails"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleArticleDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageArticleDetails"
        tools:text="@string/text_title_article" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvByTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/text_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toStartOf="@+id/tvTitleArticleDetails"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleArticleDetails" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNewsSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toEndOf="@+id/tvByTitle"
        app:layout_constraintTop_toTopOf="@+id/tvByTitle"
        tools:text="SpaceNews" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_int"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toEndOf="@+id/tvNewsSite"
        app:layout_constraintTop_toTopOf="@+id/tvNewsSite" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPublishedAtDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toEndOf="@+id/tvInTitle"
        app:layout_constraintTop_toTopOf="@+id/tvInTitle"
        tools:text="2021-05-07T19:06:39.000Z" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans"
        android:lineSpacingExtra="5dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvByTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvByTitle"
        tools:text="@string/text_summary_article" />

    <TextView
        android:id="@+id/tvUpdateAtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_updatedAt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toStartOf="@+id/tvSummary"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

    <TextView
        android:id="@+id/tvUpdateAtDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateAtTitle"
        app:layout_constraintTop_toTopOf="@+id/tvUpdateAtTitle"
        tools:text="2021-05-07T19:06:39.000Z" />

    <ProgressBar
        android:id="@+id/progressBarDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>